src/objects/OrgFeatureToggle__mdt.object
<CustomObject>
    <fields>
        <fullName>FeatureToggle__c</fullName>
        <label>Feature Toggle</label>
        <referenceTo>FeatureToggle__mdt</referenceTo>
        <relationshipLabel>Org Feature Toggles</relationshipLabel>
        <relationshipName>OrgFeatureToggles</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>OrgDefinition__c</fullName>
        <label>Org Definition</label>
        <referenceTo>OrgDefinition__mdt</referenceTo>
        <relationshipLabel>Org Feature Toggles</relationshipLabel>
        <relationshipName>OrgFeatureToggles</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ActivationDateTime__c</fullName>
        <description>The date and time that the feature will activate upon.</description>
        <inlineHelpText>The date and time that the feature will activate upon.</inlineHelpText>
        <label>Activation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this checkbox is checked the feature will be active.</description>
        <inlineHelpText>When this checkbox is checked the feature will be active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeactivationDateTime__c</fullName>
        <description>The date and time that the feature will deactivate upon.</description>
        <inlineHelpText>The date and time that the feature will deactivate upon.</inlineHelpText>
        <label>Deactivation Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>Org Feature Toggle</label>
    <pluralLabel>Org Feature Toggles</pluralLabel>
</CustomObject>